--- a/templates/success.html
+++ b/templates/success.html
@@ -5,8 +5,5 @@
 {% endblock %}
 
 {% block body %}
-{% for item in books %}
-    <h2>{{ item.bookid }}</h2>
-{% endfor %}
-
+    <h2>{{ message }}</h2>
 {% endblock %}
