--- a/templates/indexfinal.html
+++ b/templates/indexfinal.html
@@ -15,6 +15,8 @@
             <li><a href="#">Company</a></li> 
             <li><a href="#">Contact</a></li>
             <li><a href="{{url_for('mybooks')}}">MyBooks</a></li> 
+            <li><a href="{{url_for('logout')}}">Logout</a></li>            
+
             
     	</ul>
     </div> 
