--- a/templates/subpage.html
+++ b/templates/subpage.html
@@ -8,7 +8,7 @@
 <div id="templatemo_container">
 	<div id="templatemo_menu">
     	<ul>
-            <li><a href="{{ url_for('transfer')}}">Home</a></li>
+            <li><a href="{{ url_for('index')}}">Home</a></li>
             <li><a href="#" class="current">Search</a></li>
             <li><a href="indexfinal.html">Books</a></li>            
             <li><a href="indexfinal.html">New Releases</a></li>  
@@ -45,9 +45,13 @@
             <div class="image_panel"><img src="{{imglink[i]}}" alt="Book cover" width="100" height="150" /></div>
           
             <ul>
-	            <li>{{author[i]}}</li>
-            	<li>{{publish_date[i]}}</li>
-                <li>{{page_count[i]}}</li>
+	            <li>Authors:- 
+                    {% for auth in author[i] %}
+                        <span>{{auth}} </span>
+                    {% endfor %}
+                </li>
+            	<li>Published on:  {{publish_date[i]}}</li>
+                <li>Page Count:  {{page_count[i]}}</li>
                 <li>ISBN 10: {{isbn10[i]}} | ISBN 13: {{isbn13[i]}}</li>
                 <li><form action="{{url_for('addbook')}}" method="post">
                         <input id="title" name="bookisbn" value="{{isbn10[i]}}" style="display:none">
