--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,7 @@
                 <h3>PASSWORD</h3>
                 <input type="password" id="pass" name="password" required placeholder="Enter password"><br>
                 <button type="submit" id="sub">Login</button><br>
+                <a href="{{ url_for('forgot')}}">Forgot password</a>
             </form>
                 <div>
                     <span><br>Do not have account<br><a id="signup" href="{{ url_for('register') }}">SIGNUP</a>
