--- a/templates/mybooklist.html
+++ b/templates/mybooklist.html
@@ -10,9 +10,9 @@
     	<ul>
             <li><a href="{{ url_for('index')}}">Home</a></li>            
             <li><a href="#" class="current">Search</a></li>
-            <li><a href="indexfinal.html">Books</a></li>            
-            <li><a href="indexfinal.html">New Releases</a></li>  
-            <li><a href="#">Company</a></li> 
+            <!-- <li><a href="indexfinal.html">Books</a></li>             -->
+            <!-- <li><a href="indexfinal.html">New Releases</a></li>   -->
+            <!-- <li><a href="#">Company</a></li>  -->
             <li><a href="#">Contact</a></li>
             <li><a href="{{url_for('mybooks')}}">MyBooks</a></li> 
             <li><a href="{{url_for('logout')}}">Logout</a></li>            
@@ -40,7 +40,7 @@
         </div> 
         
         <div id="templatemo_content_right">
-            {% for i in range(0,3) %}
+            {% for i in range(0,rows) %}
         	
             <h1>{{title[i]}}</h1>
             <div class="image_panel"><img src="{{imglink[i]}}" alt="Book cover" width="100" height="150" /></div>
@@ -52,7 +52,7 @@
                     {% endfor %}
                 </li>
                 <li><form action="{{url_for('details')}}" method="post">
-                    <input type="text" value="{{isbn10[i]}}" name="isbn">
+                    <input type="text" value="{{isbn10[i]}}" name="isbn" style="display: none">
                     <button  type="submit" >Details</button>
                 </form></li>
             </ul>
