--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -3,15 +3,15 @@
         <title>forgot</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
-        <link rel="stylesheet" href="my.css">
+        <link rel="stylesheet" href="../static/final.css">
     </head>
     <body class="login" style="background-image:url('back.png')">
             <div class="jut">
                     <form action="{{url_for('forgot')}}" method="post">
                        <h2><center>PASSWORD RECOVERY</center></h2> 
                             <h3>USERNAME</h3>
-                            <input type="email" id="user" name="user" required placeholder="Enter your username">
-                            <button id="sub"> style="color:white;text-decoration:none"Submit</button><br>
+                            <input type="text" id="user" name="username" required placeholder="Enter your username">
+                            <button id="sub" style="color:white;text-decoration:none">Submit</button><br>
                     </form>
                 </div>
     </body>
