--- a/templates/register.html
+++ b/templates/register.html
@@ -13,6 +13,9 @@
                 <input class="form-control" name="password" placeholder="Password" type="password"/>
             </div>
             <div class="form-group">
+                <input class="form-control" name="email" placeholder="Password" type="email"/>
+            </div>
+            <div class="form-group">
                 <button class="btn btn-default" type="submit">Register</button>
             </div>
     </form>
