--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,7 +12,7 @@
             <p>Please fill in this form to create an account.</p>
             <input type="text" id="name" placeholder="Enter name" name="username" required><br>
             <!-- <input type="number" id="mob" placeholder="Enter Mobile Number" name="number" required><br> -->
-            <!-- <input type="text" id="email" placeholder="Enter Email" name="email" required><br>                                     -->
+            <input type="text" id="email" placeholder="Enter Email" name="email" required><br>                                    
             <input type="password" id="pass" placeholder="Enter Password" name="password" required><br>                 
            <!-- <input type="password" id="passrepeat" placeholder="Repeat Password" name="pass-rep" required><br>                                      
             <h2>Birthday</h2>
